# adtc-profiler

./: .dockerignore  .gcloudignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: gembugo.yml
GembuGo/: .dockerignore  Dockerfile  Instruction.md  README.md  app.js  index.html  server.py  styles.css  tutor.css
src/adtc_profiler/: __init__.py  accuracy.py  cli.py  comparator.py  environment.py  gguf.py  memory.py  report.py  reproducibility.py  thermal.py  throughput.py
src/adtc_profiler/schema/: adtc-profiler.schema.json
tests/: sample-submission.json  test_comparator.py  test_environment.py  test_schema_validation.py
