[project]
name = "adtc-profiler"
version = "0.1.0"
description = "ADTC 2026 reference profiler — composes llama-bench, psutil, lm-eval-harness into schema-valid JSON benchmark reports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ADTC Working Group" }]

dependencies = [
    "click>=8.1.0",
    "psutil>=5.9.0",
    "jsonschema>=4.21.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Accuracy benchmarks pull in heavy deps (torch, transformers). Optional so
# pipeline can be exercised without them during local iteration.
accuracy = ["lm-eval>=0.4.4"]

[project.scripts]
adtc-profiler = "adtc_profiler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adtc_profiler"]

[tool.hatch.build]
include = ["src/adtc_profiler/**/*.json"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
